# TeXnicCenter

./: .clang-format  .gitignore  .gitmodules  .hgignore  CMakeLists.txt  ChangeLog.txt  HACKING  HowToBuild.txt  HowToGit.txt  HowToHg.txt  HowToRelease.txt  HowToSVN.txt  HowToScintilla.txt  README.rst  TeXnicCenter.sln  _gourceViewFS.cmd  gitallrevisions.sh
CrysEditEx/: editcmd.h
Dictionaries/: Dictionaries.vcproj  Dictionaries.vcxproj  Dictionaries.vcxproj.filters  README_de_DE_frami.txt  README_fr_FR-1990.txt  README_fr_FR.txt  README_pl_PL.txt  fr_FR-1990.aff  fr_FR-1990.dic  fr_moderne.aff  fr_toutesvariantes.aff
Hunspell/: ChangeLog  NEWS  README  THANKS  aclocal.m4  configure  configure.ac  hunspell.pc.in
InterfaceWrapper/: InterfaceWrapperTools.h
MFCExt/: CMakeLists.txt  CollectionException.h  ComboColorPicker.h  DoubleBuffer.h  ExtApp.h  ExtCOM.h  ExtCollection.h  ExtControls.h  ExtDialog.h  ExtTools.h  FileDialogEx.h  FileVersionInfo.cpp  MFCExt.def  MFCExt.rc  MRUCombo.h  MRUCombo_docs.html  MRUStringList.cpp  PathTool.h  Registry.h  SingleInstanceWinApp.h  SystemInfo.h  UniqueStringList.cpp  WildCard.cpp  WildCard.h  resource.h
MFCExt/Include/: ExtAfx.h  ExtApp.h  ExtCOM.h  ExtCollection.h  ExtControls.h  ExtDebug.h  ExtDialog.h  ExtException.h  ExtTools.h
MFCExt/Source/: AutoBuildCount.h  CollectionException.cpp  CollectionException.h  ComHelpers.h  ComboColorPicker.cpp  ComboColorPicker.h  DoubleBuffer.h  ExtAfx.cpp  FileDialogEx.cpp  FileDialogEx.h  FileVersionInfo.cpp  FileVersionInfo.h  FolderSelect.cpp  FolderSelect.h  FormatEdit.cpp  FormatEdit.h  IniFile.cpp  IniFile.h  MFCExt.cpp  MFCExt.def  MFCExt.dsp  MFCExt.rc  MFCExt.vcproj  MFCExt.vcxproj  MFCExt.vcxproj.filters  MFCExtD.def  MRUCombo.cpp  MRUCombo.h  MRUList.h  MRUStringList.cpp  MRUStringList.h  PathTool.cpp  PathTool.h  PerformanceTimer.cpp  PerformanceTimer.h  Registry.cpp  SingleInstanceWinApp.cpp  SingleInstanceWinApp.h  SortArray.h  SortList.h  (+10 more)
MFCExt/Source/RES/: MFCExt.rc2
MSXMLCpp/: CMakeLists.txt  DOMXML.h  DOMXML_raw.h  DebugTools.cpp  DebugTools.h  Helpers.h  MSXMLCPP.cpp  MSXMLCPP.def  SAXXML.cpp  SAXXML.h  SAXXML_raw.h  StdAfx.cpp  XMLDOMDocumentEx.cpp  XMLDOMDocumentEx.h  msxmlcpp.h
MSXMLCpp/Include/: MsXmlCppDbg.h  msxmlcpp.h
MSXMLCpp/source/: DOMXML.cpp  DOMXML.h  DebugTools.cpp  DebugTools.h  Helpers.cpp  Helpers.h  MSXMLCPP.cpp  MSXMLCPP.dsp  MSXMLCPP.rc  MSXMLCPP.vcproj  MSXMLCPP.vcxproj  MSXMLCPP.vcxproj.filters  MSXMLCPPD.def  SAXXML.cpp  SAXXML.h  StdAfx.cpp  StdAfx.h  Stream.cpp  Stream.h  XMLDOMDocumentEx.cpp  XMLDOMDocumentEx.h  XMLDOMPropertyStorage.cpp  XMLDOMPropertyStorage.h  resource.h
Patches/: Scintilla.patch  ScintillaWrapperClasses.patch
Setup/: CMakeLists.txt  GPL.rtf  Setup.nsi  TeXnicCenter (NSIS).nsi  TeXnicCenter.iss
Setup/ReleaseNotes/: TXCReleaseNotes_2.0Stable.txt  TXCReleaseNotes_2.0Stable_Web.txt  TXCReleaseNotes_2.0Stable_WebLTXC.txt  TXCReleaseNotes_2Alpha1.txt  TXCReleaseNotes_2Alpha2.txt  TXCReleaseNotes_2Alpha3.txt  TXCReleaseNotes_2Alpha4.txt  TXCReleaseNotes_2Alpha4_Web.txt  TXCReleaseNotes_2Beta1.txt  TXCReleaseNotes_2Beta1_Web.txt  TXCReleaseNotes_2Beta2.txt  TXCReleaseNotes_2Beta2_Web.txt
Setup/bitmaps/: Dialog.pdn  TopBanner.pdn
Shared/: CMakeLists.txt  Shared.vcxproj  Shared.vcxproj.filters  TeXnicCenter.cpp  TeXnicCenter.h  TeXnicCenter.rc  resource.h  stdafx.cpp
TCHelp/: AutoComplete.html  STYLE.CSS  TXCUserHelp.vcproj  TXCUserHelp.vcxproj  TXCUserHelp.vcxproj.filters  TeXnicCenter.hhc  TeXnicCenter.hhk  TeXnicCenter.hhp  TeXnicCenter.html  advanced_configuration.html  buildhelp.bat  cmdlineargs.html  commandline.html  configuration.html  copyright.html  credits.html  custom_commands.html  custom_format.html  custom_keyboard.html  custom_menu.html  custom_options.html  custom_toolbars.html  custom_tools.html  customization.html  ddecmds.html  dictionaries.html  doctemplates.html  document_templates.html  generating_output.html  genindex.html  getting_help.html  index.html  introduction.html  license.html  options.html  options_page_clean.html  options_page_file.html  options_page_general.html  options_page_paths.html  options_page_spelling.html  (+24 more)
TeXTest/: readme.txt
TeXnicCenter/: AbstractLaTeXCommand.cpp  AbstractLaTeXCommand.h  ActiveProfileDialog.cpp  ActiveProfileDialog.h  Advice.cpp  Advice.h  AutoCompleteDlg.cpp  AutoCompleteDlg.h  AutoCompleteListbox.cpp  AutoCompleteListbox.h  BCGNotifyingEditListBox.cpp  BCGNotifyingEditListBox.h  BCGRegistryEx.cpp  BCGRegistryEx.h  BCGToolbarCustomizeEx.cpp  BCGToolbarCustomizeEx.h  BiBTeXEntry.cpp  BiBTeXEntry.h  BiBTeXFile.cpp  BiBTeXFile.h  BibItem.cpp  BibItem.h  BibTeXDocument.cpp  BibTeXDocument.h  BibTeXEntryType.cpp  BibTeXEntryType.h  BibTeXOutputFilter.cpp  BibTeXOutputFilter.h  BibTeXView.cpp  BibTeXView.h  BibView.cpp  BibView.h  BookmarkEventArgs.h  BookmarkView.cpp  BookmarkView.h  BrowseButton.cpp  BrowseButton.h  CharType.h  (+341 more)
app/: AbstractLaTeXCommand.h  Advice.h  AutoCompleteDlg.cpp  BiBTeXEntry.cpp  BiBTeXEntry.h  BiBTeXFile.h  BibItem.cpp  BibItem.h  BibTeXEntryType.cpp  BibTeXView.cpp  BibView.cpp  BookmarkEventArgs.cpp  BrowseButton.cpp  BrowseButton.h  CMakeLists.txt  CharType.h  CodeDocument.cpp  CodeDocument.h  CodeView.cpp  CodeView.h  DdeCommand.cpp  DdeCommand.h  DeclareOption.h  DocumentNewDialog.cpp  DragSourceBase.h  EditMenuButton.cpp  EncodingConverter.cpp  EncodingConverter.h  EventArgs.cpp  FileClean.cpp  FileTreeCtrl.h  FileViewEx.cpp  FileViewPane.cpp  FileViewPane.h  FindReplaceDlg.cpp  FindReplaceDlg.h  GPL_german.htm  IProject.cpp  IProject.h  IProjectWizard.h  (+116 more)
app/res/: Incremental search.cur
app/xmlschema/: CommonTypes.xsd  OutputProfiles.xsd
interfacewrapper/: CMakeLists.txt
modules/interfacewrapper/: CMakeLists.txt  InterfaceWrapper.cpp
modules/msxmlcpp/: CMakeLists.txt  DOMXML.cpp  DOMXML.h  DebugTools.cpp  XMLDOMPropertyStorage.h
modules/msxmlcpp/res/: MSXMLCPP.rc2
modules/shared/: CMakeLists.txt  TeXnicCenter.def  resource.h
modules/shared/res/: TeXnicCenter.rc2
objects/: CMakeLists.txt  TeXnicCenterObjects.h
(+485 files in other folders)
